# dashboard

./: .env.example  .gitignore  .gitmodules  .syb-sync-state.json  .vercelignore  CLAUDE.md  HANDOFF.md  HANDOFF_LEADS_REDESIGN.md  OVERZICHT.md  TODO.md  autronis.db  autronis.db-shm  next.config.ts  package-lock.json  package.json  seed-demo.js  seed-today.js  tailwind.config.ts  update-script2.js  vercel.json
.claude/: settings.json  settings.local.json
.playwright-mcp/: page-2026-04-10T09-49-56-508Z.yml  page-2026-04-10T10-26-36-798Z.yml  page-2026-04-17T18-48-45-748Z.yml
desktop-agent/: INSTALLATIE-SYB.md  TIME-TRACKING-SPEC.md  index.html  package-lock.json  vite.config.ts
desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent/src-tauri/capabilities/: default.json
desktop-agent/src-tauri/src/: config.rs  http_server.rs  lib.rs  project_sync.rs  storage.rs  sync.rs  tracker.rs
docs/: cluster-briefing-voor-syb.md  dark-mode-spec.md  project-intake-flow.md  syb-lead-dashboard-dispatch.yml  synchronisatie-flow.md  upwork-n8n-workflow.json  upwork-setup.md
drizzle/: 0000_fine_ultimo.sql  0001_clumsy_marvex.sql  0002_open_jocasta.sql  0003_video_templates.sql  0004_contracten.sql  0005_agent_activiteit.sql  0006_graceful_shard.sql  0007_certain_tinkerer.sql  0007_maandrapport.sql  0008_api_services.sql  0009_avatar_url.sql  0010_bridge_v2_agenda_eigenaar.sql  0011_rapport_type.sql  0012_upwork_submitted.sql
n8n/: yt-playlist-sync.workflow.json  yt-transcript-proxy.workflow.json
public/: Waves.webm  alliance-assessment.html  sw.js  (+3 more)
(+1095 files in other folders)
