[package]
name = "desktop-agent"
version = "0.2.0"
description = "Autronis Dashboard — Native desktop app"
authors = ["Autronis"]
edition = "2021"

[lib]
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "time", "sync", "process"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex-lite = "0.1"
warp = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "implement",
] }

